2024-05-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-container.el (tramp-container-no-container-regexp):
	New defcustom.
	(tramp-actions-before-shell, tramp-actions-copy-out-of-band): Declare.
	Add `tramp-container-no-container-regexp'.  (Bug#71200)

	* tramp-sh.el (tramp-methos) <scp, ssh>:
	Adapt `tramp-direct-async' argument.  (Bug#71259)

2024-05-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	Obey `tramp-histfile-override'.  (Bug#71049)

	* tramp-container.el (tramp-distrobox-program): New defcustom.
	(tramp-distrobox-method): New defconst.
	(tramp-distrobox--completion-function)
	(tramp-enable-distrobox-method): New defuns.  (Bug#71200)
	(tramp-docker-method, tramp-dockercp-method)
	(tramp-podman-method, tramp-podmancp-method)
	(tramp-kubernetes-method, tramp-flatpak-method)
	(tramp-apptainer-method, tramp-nspawn-method): Adapt docstring.

	* tramp-sh.el (tramp-histfile-override): Add ;;;###tramp-autoload
	cookie and `permanent-local' symbol property.

2024-05-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	* tramp-androidsu.el (tramp-androidsu-handle-make-process):
	Set sentinel `ignore'.  (Bug#71049)

	* tramp-androidsu.el (tramp-androidsu-maybe-open-connection):
	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
	Adapt progress-reporter message.

	* tramp-sh.el (tramp-maybe-open-connection):
	Divide progress-reporter into two parts.  (Bug#70901)

2024-05-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-container.el: Move connection-local settings where they
	belong to.

	* tramp-sshfs.el (tramp-connection-properties): Do not set
	connection property "direct-async-process".
	(tramp-direct-async-process): Set connection-local value.

2024-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-shell, tramp-find-inline-compress)
	(tramp-get-remote-path):
	* tramp-smb.el (tramp-smb-handle-process-file): Use `tramp-warning'.
