@@ -1,3 +1,11 @@
+2024-05-31  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-container.el (tramp-actions-copy-out-of-band)
+	(tramp-container-no-container-regexp): Remove.  Do not register them.
+	(tramp-distrobox-no-container-regexp): New defcustom.
+	(tramp-enable-distrobox-method): Add it to
+	`'tramp-actions-before-shell.  (Bug#71200)
+
 2024-05-30  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-container.el (tramp-container-no-container-regexp):
